objects/Energy_Price_Book_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Energy_Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Energy Pricebook</label>
        <referenceTo>Energy_Price_Book__c</referenceTo>
        <relationshipLabel>Energy Price Book Entry</relationshipLabel>
        <relationshipName>Energy_Price_Book_Entry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Energy Price Book Entry</relationshipLabel>
        <relationshipName>Energy_Price_Book_Entry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StandardPrice__c</fullName>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UseStandardPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Standard Price</label>
        <type>Checkbox</type>
    </fields>
    <label>Energy Price Book Entry</label>
    <nameField>
        <label>Energy Price Book Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Energy Price Book Entry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>